-modele, migrari, crud antilope

--- a/Vulcanizare.WEB/appsettings.json
+++ b/Vulcanizare.WEB/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VulcanizareWEBContext": "Server=(localdb)\\mssqllocaldb;Database=Vulcanizare.WEB.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
