--- a/Vulcanizare.WEB/appsettings.json
+++ b/Vulcanizare.WEB/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VulcanizareWEBContext": "Server=(localdb)\\mssqllocaldb;Database=Vulcanizare.WEB.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VulcanizareWEBContext": "Server=(localdb)\\mssqllocaldb;Database=Vulcanizare.WEB.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LibraryIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Vulcanizare.WEB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
